[package]
name = "fork-join"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2"
rayon = "1.5.1"

[[bin]]
name = "seq"
path = "src/seq.rs"

[[bin]]
name = "rayon"
path = "src/rayon.rs"

[[bin]]
name = "manual"
path = "src/manual.rs"